add weather endpoint

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
 # API Key for authentication
 # Generate a secure random key for production
 API_KEY=your-secret-api-key-here
+
+# OpenWeatherMap API Key
+# Get your free API key at https://openweathermap.org/api
+OPENWEATHER_API_KEY=your-openweather-api-key-here
+
+# Location coordinates for weather data (optional, defaults to NYC)
+LATITUDE=40.7128
+LONGITUDE=-74.0060
