--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ node_modules/
 # Environment variables
 .env
 
+# Build output
+dist/
+
 # Netlify
 .netlify/
 
@@ -11,6 +14,9 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# TypeScript
+*.tsbuildinfo
 
 # OS
 .DS_Store
