--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,8 @@
 [build]
-  functions = "netlify/functions"
+  command = "npm run build"
+  functions = "dist"
 
 [dev]
-  functions = "netlify/functions"
+  command = "npm run build"
+  functions = "dist"
   publish = "public"
