--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,10 @@
   functions = "dist"
 
 [dev]
-  command = "npm run build"
   functions = "dist"
   publish = "public"
+
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/api/:splat"
+  status = 200
