--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "serverless-http": "^3.2.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "@netlify/blobs": "^8.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
