--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,8 @@
     "resolveJsonModule": true,
     "moduleResolution": "node",
     "types": ["node"],
-    "declaration": true,
-    "sourceMap": true
+    "declaration": false,
+    "sourceMap": false
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "netlify"]
