refactor recycling logic

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ OPENWEATHER_API_KEY=your-openweather-api-key-here
 # Location coordinates for weather data (optional, defaults to NYC)
 LATITUDE=40.7128
 LONGITUDE=-74.0060
+
+# Timezone for recycling calculations (optional, defaults to Pacific Time)
+# Use IANA timezone format: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+TIMEZONE=America/Los_Angeles
