--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "netlify dev",
     "build": "tsc",
     "deploy": "npm run build && netlify deploy --prod",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "keywords": ["netlify", "serverless", "api"],
   "author": "",
@@ -21,7 +24,9 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.6",
+    "@vitest/ui": "^1.1.0",
     "netlify-cli": "^17.10.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.1.0"
   }
 }
