refactor recycling with configurable input

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,13 @@ LONGITUDE=-74.0060
 # Timezone for recycling calculations (optional, defaults to Pacific Time)
 # Use IANA timezone format: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 TIMEZONE=America/Los_Angeles
+
+# Recycling schedule configuration (all optional)
+# Day of week for recycling (0=Sunday, 1=Monday, 2=Tuesday, etc.) - defaults to 2 (Tuesday)
+RECYCLING_DAY_OF_WEEK=2
+# Hour cutoff (0-23) after which we look at next week - defaults to 12 (noon)
+RECYCLING_CUTOFF_HOUR=12
+# Reference date that was a recycling week (YYYY-MM-DD) - defaults to 2025-11-18
+RECYCLING_REFERENCE_DATE=2025-11-18
+# Whether the reference date was a recycling week (true/false) - defaults to true
+RECYCLING_REFERENCE_WAS_RECYCLING=true
